# weewx-docker

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  bump_version.sh  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  dependency-review.yml  scorecards.yml  stale-issues.yml  sync-labels.yml
src/: _version.py  entrypoint.sh  hashes
