[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [{ name = "Mark Feldhousen", email = "markf@geekpad.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = ["pyserial", "pyusb", "setuptools", "weewx == 5.1.0"]
description = "Containerized WeeWX"
dynamic = ["version"]
keywords = ["container", "docker", "weewx"]
license = { file = "LICENSE" }
name = "weewx-docker"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/felddy"
issues = "https://github.com/felddy/weewx-docker/issues"
source = "https://github.com/felddy/weewx-docker"

[project.optional-dependencies]
test = [
    "coverage",
    "coveralls",
    "docker",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "semver",
]

[tool.setuptools.dynamic]
version = { attr = "_version.__version__" }
